--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   flutter_screenutil: ^5.6.1
   flutter_swiper_view: ^1.1.8
   dio: ^4.0.6
+  flutter_staggered_grid_view: ^0.6.2
 
 dev_dependencies: 
   flutter_lints: ^2.0.0
