--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   flutter_swiper_view: ^1.1.8
   dio: ^4.0.6
   flutter_staggered_grid_view: ^0.6.2
+  shared_preferences: ^2.0.17
 
 dev_dependencies: 
   flutter_lints: ^2.0.0
