--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,5 +34,8 @@ flutter:
     - assets/images/xiaomiBanner2.png
     - assets/images/2.0x/xiaomiBanner2.png
     - assets/images/3.0x/xiaomiBanner2.png
+    - assets/images/service.png
+    - assets/images/2.0x/service.png
+    - assets/images/3.0x/service.png
 
        
